fix: overflow-wrap

--- a/src/article/content.module.scss
+++ b/src/article/content.module.scss
@@ -39,6 +39,7 @@
 
   :global(.budouxParagraph) {
     word-break: keep-all;
+    overflow-wrap: anywhere;
   }
 
   :global(.icon) {
